# MetalOtter

./: .gitmodules  CMakeLists.txt  Configure_iOS.sh  Otter.code-workspace  README.md
Libraries/: CMakeLists.txt
Otter/: CMakeLists.txt
Otter/Assets/Shaders/Simple/: Simple.vert
Otter/Include/: Otter.hpp
Otter/Include/Otter/: Application.hpp  EntryPoint.hpp
Otter/Include/Otter/Components/: ComponentRegister.hpp  MeshRenderer.hpp  Transform.hpp
Otter/Include/Otter/Core/: Application.hpp  ComponentArray.hpp  ComponentManager.hpp  Coordinator.hpp  EntityManager.hpp  Event.hpp  EventManager.hpp  System.hpp  SystemManager.hpp  Types.hpp  Window.hpp  WindowFactory.hpp
Otter/Include/Otter/OS/: Window.hpp
Otter/Include/Otter/OS/Darwin/: DarwinWindow.hpp
Otter/Include/Otter/Systems/: Renderer.hpp  SystemRegister.hpp  TemplateSystem.hpp
Otter/Include/Otter/Utilities/: MD5.hpp  ShaderUtilities.hpp
Otter/Source/: Application.cpp
Otter/Source/Core/: Application.cpp  Window.cpp
Otter/Source/OS/Darwin/: DarwinWindow.cpp  Window.cpp
Otter/Source/Systems/: Renderer.cpp  TemplateSystem.cpp
Otter/Source/Utilities/: MD5.cpp  ShaderUtilities.cpp
Sandbox/: CMakeLists.txt
Sandbox/Include/: MainWindow.hpp  SandboxApp.hpp  SecondWindow.hpp
Sandbox/Source/: MainWindow.cpp  SandboxApp.cpp  SecondWindow.cpp
Sandbox_iOS/: CMakeLists.txt  ViewController.m  main.mm
